[fix][dingo-proxy] Fix proxy